application/css/style.css
* {
  padding: 0;
  margin: 0;
  font-family: Open Sans;
  color: #000;
}
#container {
  display: grid;
  grid-template-areas: "header nav" "main main";
  grid-template-columns: 200px 1fr;
}
@media screen and (max-width: 755px) {
  #container {
    grid-template-areas: "header" "main" "nav";
    grid-template-columns: 1fr;
  }
  nav {
    position: fixed;
    left: 0;
    bottom: 0;
  }
}
header {
  grid-area: header;
}
header .logo {
  display: block;
  max-height: 100px;
  height: auto;
  width: auto;
}
main {
  grid-area: main;
  max-width: 100%;
}
main table {
  width: 100% !important;
  display: block;
  overflow-x: scroll;
  white-space: nowrap;
}
nav {
  grid-area: nav;
  width: 100%;
}
nav ul {
  display: flex;
  flex-direction: row;
  align-items: center;
  text-decoration: none;
  list-style-type: none;
  justify-content: space-between;
}
nav ul li {
  padding: 10px;
  text-decoration: none;
}
@media screen and (min-width: 756px) {
  nav ul li:last-child button[type=submit] {
    font-size: 17px;
    float: right;
    border: none;
    cursor: pointer;
    width: 32px;
    height: 32px;
    background-image: url("../images/96px/baseline_search_black_48dp.png");
    background-color: #DDD;
    background-size: contain;
  }
  nav ul li:last-child input[type="text"] {
    font-size: 17px;
    border: none;
    padding: 6px;
  }

  .inputClass {
    background-color: green;
    
  }
}
@media screen and (max-width: 755px) {
  nav ul li:last-child input[type="text"] {
    display: none;
  }
  nav ul button[type=submit] {
    background-color: #FFF;
    font-size: 17px;
    float: right;
    border: none;
    cursor: pointer;
    width: 48px;
    height: 48px;
    background-image: url("../images/96px/baseline_search_black_48dp.png");
    background-repeat: no-repeat;
    background-size: contain;
  }
}
#home-icon {
  background: url(../images/96px/baseline_home_black_48dp.png);
  display: block;
  background-size: 48px 48px;
  width: 48px;
  height: 48px;
  background-repeat: no-repeat;
}
#customers-icon {
  background: url(../images/96px/baseline_supervised_user_circle_black_48dp.png);
  display: block;
  background-size: 48px 48px;
  width: 48px;
  height: 48px;
  background-repeat: no-repeat;
}
#calendar-icon {
  background: url(../images/96px/baseline_calendar_today_black_48dp.png);
  display: block;
  background-size: 48px 48px;
  width: 48px;
  height: 48px;
  background-repeat: no-repeat;
}
#todo-icon {
  background: url(../images/96px/baseline_format_list_bulleted_black_48dp.png);
  display: block;
  background-size: 48px 48px;
  width: 48px;
  height: 48px;
  background-repeat: no-repeat;
}
#search-icon {
  background: url("../images/96px/baseline_search_black_48dp.png");
  display: block;
  background-size: 48px 48px;
  width: 48px;
  height: 48px;
  background-repeat: no-repeat;
}
.lds-ring {
  display: inline-block;
  position: relative;
  width: 64px;
  height: 64px;
}
.lds-ring div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  width: 51px;
  height: 51px;
  margin: 6px;
  border: 6px solid #000;
  border-radius: 50%;
  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
  border-color: #000 transparent transparent transparent;
}
.lds-ring div:nth-child(1) {
  animation-delay: -0.45s;
}
.lds-ring div:nth-child(2) {
  animation-delay: -0.3s;
}
.lds-ring div:nth-child(3) {
  animation-delay: -0.15s;
}
@keyframes lds-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

